# OpenGL_demo

./: CMakeLists.txt  README.md
include/: ogldev_math_3d.h
shaders/: triColor.fs  triColor.vs
src/: 2_5_rectMove.cpp  3_4_3dPaintPad.cpp  3_4_3dRotate.cpp  3_6_lines.cpp  3_7_polygons.cpp  3_8_solidObject.cpp  dot.cpp  example.cpp  rectangle.cpp  rubikCube.cpp  triColor.cpp  triangle.cpp
